[gd_scene load_steps=13 format=3 uid="uid://bo4ekf0ypdo1f"]

[ext_resource type="Script" uid="uid://oofrgxwggij1" path="res://scenes/project_manage_panel/card/card.gd" id="1_5577b"]
[ext_resource type="FontFile" uid="uid://ya4ry7qi6plk" path="res://assets/fonts/NotoSansSC/NotoSansSC-Medium.ttf" id="2_davfs"]
[ext_resource type="Shader" uid="uid://cthsbvhawucuo" path="res://assets/shader/scale.gdshader" id="2_f3yfe"]
[ext_resource type="Script" uid="uid://0syxcf2838lg" path="res://addons/handy_nodes/trigger_reactor/trigger.gd" id="3_paafk"]
[ext_resource type="Script" uid="uid://bt6tds0lgyobf" path="res://addons/handy_nodes/trigger_reactor/reactor.gd" id="4_bvlio"]
[ext_resource type="Texture2D" uid="uid://cse0q41qflgwj" path="res://assets/icons/delete.svg" id="5_bvlio"]
[ext_resource type="Script" uid="uid://cs0ekt1ad0bqn" path="res://components/theme_manager/apply_theme_color.gd" id="6_4xy5x"]
[ext_resource type="Texture2D" uid="uid://dyw6sp5ub01ga" path="res://assets/icons/image_export.svg" id="7_uda2m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4l04p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_in8cv"]
bg_color = Color(0.203125, 0.203125, 0.203125, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_paafk"]
shader = ExtResource("2_f3yfe")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_davfs"]
bg_color = Color(0.196078, 0.192157, 0.176471, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 12.0
expand_margin_top = 5.0
expand_margin_right = 12.0

[node name="Card" type="PanelContainer"]
offset_right = 240.0
offset_bottom = 240.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_4l04p")
script = ExtResource("1_5577b")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"base_button"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -16

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 240)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PanelContainer" type="Panel" parent="VBoxContainer/MarginContainer"]
clip_children = 1
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_in8cv")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/PanelContainer"]
unique_name_in_owner = true
texture_filter = 1
material = SubResource("ShaderMaterial_paafk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="Trigger" type="Node" parent="VBoxContainer/MarginContainer/PanelContainer/TextureRect" node_paths=PackedStringArray("trigger_control")]
script = ExtResource("3_paafk")
trigger_type = 3
trigger_control = NodePath("../../../../../Button")
metadata/_custom_type_script = "uid://0syxcf2838lg"

[node name="Reactor" type="Node" parent="VBoxContainer/MarginContainer/PanelContainer/TextureRect/Trigger" node_paths=PackedStringArray("react_control")]
script = ExtResource("4_bvlio")
react_control = NodePath("../..")
fn_name = "mouse_in_out_shader"
fn_args = [0.2, 1.2]
metadata/_custom_type_script = "uid://bt6tds0lgyobf"

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DeleteButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
self_modulate = Color(0.196078, 0.192157, 0.176471, 1)
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_constants/icon_max_width = 48
icon = ExtResource("5_bvlio")
flat = true
icon_alignment = 1

[node name="ApplyThemeColor" type="Node" parent="VBoxContainer/ButtonsContainer/DeleteButton"]
script = ExtResource("6_4xy5x")
metadata/_custom_type_script = "uid://cs0ekt1ad0bqn"

[node name="ExportButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
self_modulate = Color(0.196078, 0.192157, 0.176471, 1)
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_constants/icon_max_width = 48
icon = ExtResource("7_uda2m")
flat = true
icon_alignment = 1

[node name="ApplyThemeColor" type="Node" parent="VBoxContainer/ButtonsContainer/ExportButton"]
script = ExtResource("6_4xy5x")
metadata/_custom_type_script = "uid://cs0ekt1ad0bqn"

[node name="SizeLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.859375, 0.859375, 0.859375, 1)
theme_override_fonts/font = ExtResource("2_davfs")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_davfs")
text = "1024x1024"
horizontal_alignment = 1
